5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1674_1100.log
== TEST (2019-04-25 10:56:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: ")
print("Entrada",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- ERROR:
File "XXXX", line 6
    print("Entrada",cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: ")
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- ERROR:
File "XXXX", line 6
    print("Entrada:",cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: ")
				 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- ERROR:
File "XXXX", line 7
    print("Entrada:",cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: ")
				 
print("Entrada: ",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- ERROR:
File "XXXX", line 7
    print("Entrada: ",cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:59:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: ")
 
print("Entrada: ",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- ERROR:
File "XXXX", line 7
    print("Entrada: ",cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: ")
 
print("Entrada: ",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- ERROR:
File "XXXX", line 7
    print("Entrada: ",cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada: ",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:00:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada: ",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- EXECUTION TIME:
0.148835
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada: ",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:00:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- EXECUTION TIME:
0.160999
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garça")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				 print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garca")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				   print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:01:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garca")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				   print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- EXECUTION TIME:
0.19466
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garca")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				   print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				   



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:02:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garca")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				   print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
					else:
						print("Animal: Invalido")
				   



-- EXECUTION TIME:
0.17717
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 26
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garca")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				   print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
					else:
						print("Animal: Invalido")
				   



-- ERROR:
File "XXXX", line 26
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:02:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garca")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				   print("Animal: Onca-pintada")
				else:
				 	if(cedula==100):
				 		print("Animal: Garoupa")
				 	else:
				 		print("Animal: Invalido")
				   



-- EXECUTION TIME:
0.152671
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Digite  a cedula: Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:03:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
else:
	if(cedula==5):
	   print("Animal: Garca")
	else:
		if(cedula==10):
		   print("Animal: Arara")
		else:
			if(cedula==20):
			   print("Animal: Mico-leao-dourado")
			else:
				if(cedula==50):
				   print("Animal: Onca-pintada")
				else:
				 	  if(cedula==100):
				 		print("Animal: Garoupa")
				 	   else:
				 		print("Animal: Invalido")
				   



-- EXECUTION TIME:
0.141369
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 25
    print("Animal: Garoupa")
                           ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:04:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
elif (cedula==5):
	   print("Animal: Garca")
	elif(cedula==10):
		   print("Animal: Arara")
		elif(cedula==20):
			   print("Animal: Mico-leao-dourado")
			elif(cedula==50):
				   print("Animal: Onca-pintada")
				elif(cedula==100):
				 		print("Animal: Garoupa")
				 	   else:
				 		print("Animal: Invalido")
				   



-- EXECUTION TIME:
0.143612
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 13
    elif(cedula==10):
                    ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:04:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
elif (cedula==5):
	   print("Animal: Garca")
	elif(cedula==10):
		   print("Animal: Arara")
		elif(cedula==20):
			   print("Animal: Mico-leao-dourado")
			elif(cedula==50):
				   print("Animal: Onca-pintada")
				elif(cedula==100):
				 		print("Animal: Garoupa")
				else:
				 		print("Animal: Invalido")
				   



-- EXECUTION TIME:
0.117563
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 13
    elif(cedula==10):
                    ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:07:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Digite  a cedula: "))
 
print("Entrada:",cedula)

if(cedula ==2):
	print("Animal: Tartaruga")
elif (cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")



-- EXECUTION TIME:
0.166632
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
